# Programmieruebung2_Abschlussprojekt

./: README.md  ekgdata.py  herzrate.py  json_handler.py  login.py  main.py  pdf_export.py  person.py  pyproject.toml  requirements.txt  upload.py
data/: json_handler.py  logindaten.json  person_db.json
data/ekg_data/: d5c412ea_test_ekg_realistisch.txt
